# my_pretty_box

./: box.json  box版本说明.txt  readme.txt  盒子wifi调试参数.txt
MediaLibApp/: build.gradle  gradle.properties  local.properties  mykey.jks  settings.gradle
MediaLibApp/MediaLib/: CMakeLists.txt  build.gradle
MediaLibApp/MediaLib/src/androidTest/java/com/mymedia/: ExampleInstrumentedTest.kt
MediaLibApp/MediaLib/src/main/: AndroidManifest.xml
MediaLibApp/MediaLib/src/main/cpp/: com_medialib_jni_MediaJni.cpp  com_medialib_jni_MediaJni.h
MediaLibApp/MediaLib/src/main/cpp/include/: packet_fifo.h  rtmp_client.h  rtmp_stream.h  rtmpsrv.h  thread.h  utils.h
MediaLibApp/MediaLib/src/main/cpp/include/librtmp/: amf.h  dh.h  handshake.h  log.h  rtmp.h  rtmp_sys.h
MediaLibApp/MediaLib/src/main/cpp/include/mycodec/: audio_codec.h  audio_config.h  audio_def.h  codec.h  demuxing_decode.h  libconfig.h  log.h  stream_buffer.h  stream_buffer.inl  vcodec.h  vexception.h  video_config.h  video_def.h
MediaLibApp/MediaLib/src/main/java/com/medialib/jni/: MediaJni.java
MediaLibApp/MediaLib/src/main/jniLibs/arm64-v8a/: libx264.so.148
MediaLibApp/MediaLib/src/main/jniLibs/arm64-v8a/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc  x264.pc
MediaLibApp/MediaLib/src/main/jniLibs/armeabi-v7a/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc  x264.pc
agent/: build_linux.bat  go.mod  go.sum  kill_pid.sh  main.go  (+1 more)
(+583 files in other folders)
