cmake_minimum_required(VERSION 3.4.1)
set(PROJECT_NAME MediaJni)
project(${PROJECT_NAME})
set(base_dir ${PROJECT_SOURCE_DIR}/src/main)
set(src_dir ${base_dir}/cpp)
set(inc_dir ${base_dir}/cpp/include)
#set(ANDROID_ABI armeabi-v7a)
set(ANDROID_ABI arm64-v8a)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -L${base_dir}/jniLibs/${ANDROID_ABI}")
INCLUDE_DIRECTORIES( BEFORE ${inc_dir} )
aux_source_directory(${src_dir} SRC_FILE)
find_library(log-lib log)
find_library(egl-lib EGL)
find_library(gle-lib GLESv3)
add_library(${PROJECT_NAME} SHARED ${src_dir}/com_medialib_jni_MediaJni.cpp)
#add_library(mymedia SHARED IMPORTED)
#set_property(TARGET mymedia PROPERTY IMPORTED_LOCATION libmymedia.so)
#add_library(yuv-lib SHARED IMPORTED)
#set_property(TARGET yuv-lib PROPERTY IMPORTED_LOCATION ${base_dir}/jniLibs/${ANDROID_ABI}/libyuv.so)
#message(${yuv-lib})
#message(${mymedia})
target_link_libraries(${PROJECT_NAME} libmycodec.so librtmpsvr.so libx264.so  libyuv.so ${egl-lib} ${gle-lib} ${log-lib})